traversal.snake.Snake.scala.error
Compilation error:
Snake:8: error: Boolean.type does not take parameters
def isInPosition() = Boolean {
                             ^